--- a/ADS1115SunTracker_bom.html
+++ b/ADS1115SunTracker_bom.html
@@ -30,7 +30,7 @@ td {
 <body>
 <h1>Bill of Materials: ADS1115SunTracker.fzz</h1>
 <p class="meta">C:\Users\Adam\Documents\GitHub\ADS1115SunTracker\ADS1115SunTracker.fzz</p>
-<p class="meta">Monday, July 31 2023, 01:06:51</p>
+<p class="meta">Saturday, October 21 2023, 22:23:21</p>
 
 <h2>Assembly List</h2>
 <table>
@@ -57,63 +57,77 @@ td {
     <td></td>
     <td></td>
     <td>PHOTOCELL</td>
-    <td class="props">variant pth-kit; package photocell-kit</td>
+    <td class="props">package photocell-kit; variant pth-kit</td>
 </tr>
 <tr>
     <td>Bottom right</td>
     <td></td>
     <td></td>
     <td>PHOTOCELL</td>
-    <td class="props">variant pth-kit; package photocell-kit</td>
+    <td class="props">package photocell-kit; variant pth-kit</td>
 </tr>
 <tr>
     <td>J1</td>
     <td></td>
     <td></td>
     <td>Generic female header - 10 pins</td>
-    <td class="props">pin spacing 0.1in (2.54mm); row single; form ♀ (female); hole size 1.0mm,0.508mm; pins 10; package THT</td>
+    <td class="props">pins 10; form ♀ (female); row single; package THT; pin spacing 0.1in (2.54mm); hole size 1.0mm,0.508mm</td>
+</tr>
+<tr>
+    <td>J2</td>
+    <td></td>
+    <td></td>
+    <td>Generic male header - 4 pins</td>
+    <td class="props">pins 4; form ♂ (male); row single; package THT; pin spacing 0.1in (2.54mm); hole size 1.0mm,0.508mm</td>
+</tr>
+<tr>
+    <td>J3</td>
+    <td></td>
+    <td></td>
+    <td>Generic male header - 4 pins</td>
+    <td class="props">pins 4; form ♂ (male); row single; package THT; pin spacing 0.1in (2.54mm); hole size 1.0mm,0.508mm</td>
 </tr>
 <tr>
     <td>R5</td>
     <td></td>
     <td></td>
     <td>TRIMPOT</td>
-    <td class="props">variant pth; maximum resistance 10kΩ; package trim_pot_pth; power 0.5W; knob status 50%</td>
+    <td class="props">package trim_pot_pth; maximum resistance 10kΩ; variant pth; power 0.5W; knob status 50%</td>
 </tr>
 <tr>
     <td>R6</td>
     <td></td>
     <td></td>
     <td>TRIMPOT</td>
-    <td class="props">variant pth; maximum resistance 10kΩ; package trim_pot_pth; power 0.5W; knob status 50%</td>
+    <td class="props">package trim_pot_pth; maximum resistance 10kΩ; variant pth; power 0.5W; knob status 50%</td>
 </tr>
 <tr>
     <td>R7</td>
     <td></td>
     <td></td>
     <td>TRIMPOT</td>
-    <td class="props">variant pth; maximum resistance 10kΩ; package trim_pot_pth; power 0.5W; knob status 50%</td>
+    <td class="props">package trim_pot_pth; maximum resistance 10kΩ; variant pth; power 0.5W; knob status 50%</td>
 </tr>
 <tr>
     <td>R8</td>
     <td></td>
     <td></td>
     <td>TRIMPOT</td>
-    <td class="props">variant pth; maximum resistance 10kΩ; package trim_pot_pth; power 0.5W; knob status 50%</td>
+    <td class="props">package trim_pot_pth; maximum resistance 10kΩ; variant pth; power 0.5W; knob status 50%</td>
 </tr>
 <tr>
     <td>Top left</td>
     <td></td>
     <td></td>
     <td>PHOTOCELL</td>
-    <td class="props">variant pth-kit; package photocell-kit</td>
+    <td class="props">package photocell-kit; variant pth-kit</td>
 </tr>
 <tr>
     <td>Top right</td>
     <td></td>
     <td></td>
     <td>PHOTOCELL</td>
-    <td class="props">variant pth-kit; package photocell-kit</td>
+    <td class="props">package photocell-kit; variant pth-kit</td>
 </tr>
 
   </tbody>
@@ -142,21 +156,28 @@ td {
     <td></td>
     <td></td>
     <td>PHOTOCELL</td>
-    <td class="props">variant pth-kit; package photocell-kit</td>
+    <td class="props">package photocell-kit; variant pth-kit</td>
 </tr>
 <tr>
     <td>1</td>
     <td></td>
     <td></td>
     <td>Generic female header - 10 pins</td>
-    <td class="props">pin spacing 0.1in (2.54mm); row single; form ♀ (female); hole size 1.0mm,0.508mm; pins 10; package THT</td>
+    <td class="props">pins 10; form ♀ (female); row single; package THT; pin spacing 0.1in (2.54mm); hole size 1.0mm,0.508mm</td>
+</tr>
+<tr>
+    <td>2</td>
+    <td></td>
+    <td></td>
+    <td>Generic male header - 4 pins</td>
+    <td class="props">pins 4; form ♂ (male); row single; package THT; pin spacing 0.1in (2.54mm); hole size 1.0mm,0.508mm</td>
 </tr>
 <tr>
     <td>4</td>
     <td></td>
     <td></td>
     <td>TRIMPOT</td>
-    <td class="props">variant pth; maximum resistance 10kΩ; package trim_pot_pth; power 0.5W; knob status 50%</td>
+    <td class="props">package trim_pot_pth; maximum resistance 10kΩ; variant pth; power 0.5W; knob status 50%</td>
 </tr>
 
   </tbody>
